--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I Love You My Flower 🌹</title>
+  <title>I Love You My Little Dragon ❤️🐉</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
