--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     <div class="buttons-container">
       <a href="pagina2.html" class="btn btn-sim">Sim</a>
-      <button id="no" class="btn btn-nao">Não</button>
+      <button id="no" class="btn btn-nao">Não 🥺</button>
     </div>
   </div>
 
