--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I Love You My Little Dragon ❤️🐉</title>
+  <title>Lorem ipsum dolor sit amet consectetur adipisicing elit.</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="box">
-    <p><b>Aceita Ser o Dragãozinho do Meu Castelo?</b>
+    <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b>
     <br>🌹🐦‍⬛
     </p>
     <div class="buttons-container">
